unpackaged/main/default/objects/ccpe_r__Line_Item_Criteria__c/ccpe_r__Line_Item_Criteria__c.object-meta.xml
<CustomObject>
    <description>This object is used for storing the skill based spend</description>
    <label>Line Item Criteria</label>
    <nameField>
        <displayFormat>RC{00000000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Line Item Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>