unpackaged/main/default/objects/ccpe_r__Line_Item_Criteria__c/fields/ccpe_r__Agreed_Hours__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Agreed_Hours__c</fullName>
    <description>The hours the client has agreed to for the period in question</description>
    <label>Agreed Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>