unpackaged/main/default/objects/ccpe_r__Line_Item_Criteria__c/fields/ccpe_r__Agreed_Spend__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Agreed_Spend__c</fullName>
    <description>The spend the client has agreed to for the period in question</description>
    <label>Agreed Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>