unpackaged/main/default/objects/ccpe_r__Line_Item_Criteria__c/fields/ccpe_r__Global_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Global_Line_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When the global check box is checked, then no work type can be selected against this line item or any other line item on the master retainer</description>
    <label>Non-Skill Line Item</label>
    <type>Checkbox</type>
</CustomField>