unpackaged/main/default/objects/ccpe_r__Line_Item_Criteria__c/fields/ccpe_r__Retainer__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Retainer__c</fullName>
    <description>This object is used for storing the skill based spend</description>
    <label>Retainer</label>
    <referenceTo>ccpe_r__Retainer__c</referenceTo>
    <relationshipLabel>Line Item Criteria</relationshipLabel>
    <relationshipName>Line_Item_Criteria</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>