unpackaged/main/default/objects/ccpe_r__Line_Item_Criteria__c/fields/ccpe_r__Work_Type__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Work_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The skill that the line item is related to</description>
    <label>Work Type</label>
    <referenceTo>project_cloud__Work_Type__c</referenceTo>
    <relationshipLabel>Line Item Criteria</relationshipLabel>
    <relationshipName>Line_Item_Criteria</relationshipName>
    <type>Lookup</type>
</CustomField>