unpackaged/main/default/objects/ccpe_r__Line_Item_Criteria__c/validationRules/ccpe_r__Only_1_Global_Line_Item_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>ccpe_r__Only_1_Global_Line_Item_Allowed</fullName>
    <active>true</active>
    <description>Only a single Line Item Criteria may exist for a retainer marked Global</description>
    <errorConditionFormula>IF(ISNEW(),
ccpe_r__Retainer__r.ccpe_r__Type__c == &#39;Global&#39;, false)</errorConditionFormula>
    <errorMessage>A Line Item cannot be added if the specified Retainer has a Global Line Item</errorMessage>
</ValidationRule>